--- a/index.html
+++ b/index.html
@@ -20,22 +20,12 @@
 			<img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
 			Dog Bowl Map
 		</a>
-<!-- 		<form class="form-inline">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Map</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Register</a>
-				</li>
-			</ul>
-		</form> -->
 	</nav>
 
 	<div class="hero-container">
       <h1>Welcome to Dog Bowl Map</h1>
       <h2>We are changing how you route your dog walks to keep your dog hydrated</h2>
-      <a href="#" class="btn-register">Register a Bowl</a>
+      <a href="register.html" class="btn-register">Register a Bowl</a>
     </div>
 
 </section>
