photo btn added

--- a/register.html
+++ b/register.html
@@ -39,13 +39,18 @@
 			</div>
 		</label>
 		<label>
+		<label class="attach">
+			<p class="label-txt">ATTACH PHOTO OF BOWL</p>
+			<button class="attach_btn" type="submit">attach</button>
+		</label>
+		<label>
 			<p class="label-txt">ENTER YOUR MESSAGE TO FELLOW DOG WALKERS</p>
 			<input type="text" class="input">
 			<div class="line-box">
 				<div class="line"></div>
 			</div>
 		</label>
-		<button type="submit">submit</button>
+		<button class="submit_btn" type="submit">submit</button>
 	</form>
 </body>
 </html>
