--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 
 </head>
 <body>
-<section id="hero">
+<section class="hero">
 	<nav class="navbar navbar-expand-lg navbar-dark justify-content-between">
 		<a class="navbar-brand" href="#">
 			<img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
 			Dog Bowl Map
 		</a>
+		<ul class="navbar-nav">
+	    	<li class="nav-item">
+	        	<a class="nav-link" href="">Contact Us</a>
+	      	</li>
+    	</ul>
 	</nav>
 
 	<div class="hero-container">
