--- a/register.html
+++ b/register.html
@@ -40,8 +40,8 @@
 		</label>
 		<label>
 		<label class="attach">
-			<p class="label-txt">ATTACH PHOTO OF BOWL</p>
-			<button class="attach_btn" type="submit">attach</button>
+			<p class="label-txt">ATTACH PHOTO OF YOUR BOWL</p>
+			<button class="attach_btn" type="file" id="myFile">attach</button>
 		</label>
 		<label>
 			<p class="label-txt">ENTER YOUR MESSAGE TO FELLOW DOG WALKERS</p>
