--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</a>
 		<ul class="navbar-nav">
 	    	<li class="nav-item">
-	        	<a class="nav-link" href="">Contact Us</a>
+	        	<a class="nav-link" href="mailto:samguyette@gmail.com">Contact Us</a>
 	      	</li>
     	</ul>
 	</nav>
