--- a/register.html
+++ b/register.html
@@ -18,21 +18,21 @@
 			</div>
 		</label>
 		<label>
-			<p class="label-txt">ENTER YOUR ADDRESS</p>
+			<p class="label-txt">YOUR ADDRESS</p>
 			<input id="address" type="text" class="input">
 			<div class="line-box">
 				<div class="line"></div>
 		</div>
 		</label>
 		<label>
-			<p class="label-txt">ENTER YOUR CITY</p>
+			<p class="label-txt">YOUR CITY</p>
 			<input id="city" type="text" class="input">
 			<div class="line-box">
 				<div class="line"></div>
 			</div>
 		</label>
 		<label>
-			<p class="label-txt">ENTER YOUR ZIP CODE</p>
+			<p class="label-txt">YOUR ZIP CODE</p>
 			<input id="zip" type="text" class="input">
 			<div class="line-box">
 				<div class="line"></div>
@@ -40,11 +40,11 @@
 		</label>
 		<label>
 		<label class="attach">
-			<p class="label-txt">ATTACH PHOTO OF YOUR BOWL</p>
+			<p class="label-txt">PHOTO OF YOUR BOWL</p>
 			<button class="attach_btn" type="file" id="myFile">attach</button>
 		</label>
 		<label>
-			<p class="label-txt">ENTER YOUR MESSAGE TO FELLOW DOG WALKERS</p>
+			<p class="label-txt">YOUR MESSAGE TO FELLOW DOG WALKERS</p>
 			<input id="message" type="text" class="input">
 			<div class="line-box">
 				<div class="line"></div>
